# yew-ssg

./: .gitignore  Cargo.toml  LICENSE  README.md  about-page-116f97a8a9db4f0b.js  about-page-116f97a8a9db4f0b_bg.wasm  about-page-177c4191f40da44e_bg.wasm  about-page-1c29e6fd002ea256.js  about-page-1c29e6fd002ea256_bg.wasm  about-page-1fc975454d55021e.js  about-page-1fc975454d55021e_bg.wasm  about-page-2074aa6e9b790c4a.js  about-page-2074aa6e9b790c4a_bg.wasm  about-page-3aaff3993f3859ee.js  about-page-3aaff3993f3859ee_bg.wasm  about-page-5607d69bea989326.js  about-page-5607d69bea989326_bg.wasm  about-page-5b9844713ef9f1eb.js  about-page-5b9844713ef9f1eb_bg.wasm  about-page-71638e34d16faf6f.js  about-page-71638e34d16faf6f_bg.wasm  about-page-7e27ee69ed8a93_bg.wasm  about-page-82deb2032b331b5b.js  about-page-87666c1fc1ee2c25_bg.wasm  about-page-8b25f4ae24d7fa00_bg.wasm  about-page-969c903c78188de4_bg.wasm  about-page-96c701c2e0e0b5a9.js  about-page-96c701c2e0e0b5a9_bg.wasm  about-page-9ec8f9d881609c6f.js  about-page-9ec8f9d881609c6f_bg.wasm  about-page-b72de2a7f02d85cd_bg.wasm  about-page-be99c7af06245412.js  about-page-c3767ababbde3b4d.js  about-page-c3767ababbde3b4d_bg.wasm  about-page-c8a9d8194e3fabbf.js  about-page-c8a9d8194e3fabbf_bg.wasm  about-page-d19aca633e99b3b3.js  about-page-d19aca633e99b3b3_bg.wasm  about-page-d68b1b28274c142c.js  about-page-d68b1b28274c142c_bg.wasm  (+6 more)
.github/workflows/: gh-pages.yaml
404/: index.html
about/: index.html
crate/: index.html
crate/yew-ssg/: index.html
crate/yew-ssg-router/: index.html
de/: index.html
de/404/: index.html
de/about/: index.html
de/crate/: index.html
de/readme/: index.html
docs/: README.adoc  README.html  index.html
docs/src/: 01_introduction_and_goals.adoc  02_architecture_constraints.adoc  03_context_and_scope.adoc  04_solution_strategy.adoc  05_building_block_view.adoc  06_runtime_view.adoc  07_deployment_view.adoc  08_concepts.adoc  09_architecture_decisions.adoc  10_quality_requirements.adoc  11_technical_risks.adoc  12_glossary.adoc  about-yew-ssg.adoc
en/: index.html
en/404/: index.html
en/about/: index.html
en/crate/: index.html
en/readme/: index.html
examples/about-page/: Cargo.toml  config.yaml  index.html  style.css
examples/about-page/assets/: yew-ssg.jsonld
examples/about-page/src/: about.rs  app.rs  crates.rs  home.rs  i18n.rs  language_selector.rs  lib.rs  main.rs  not_found.rs  readme.rs  route.rs  switch_route.rs
readme/: index.html
src/: config.rs  generator.rs  generator_collection.rs  lib.rs  processor.rs  static_site_generator.rs
src/generators/: meta_tag_generator.rs  mod.rs  open_graph_generator.rs  robots_meta_generator.rs  title_generator.rs  twitter_card_generator.rs
src/processors/: attribute_processor.rs  attribute_support.rs  generator_output_support.rs  html_element_processor.rs  mod.rs  placeholder_processor.rs  template_variable_processor.rs  template_variable_support.rs
src/processors/attribute_processor/: process_element.rs  processor.rs  ssg_attribute.rs
yew-ssg/: Cargo.toml
yew-ssg-router/: Cargo.toml
yew-ssg-router-macros/: Cargo.toml
yew-ssg-router-macros/src/: lib.rs
yew-ssg-router/src/: hooks.rs  language_context.rs  language_negotiation.rs  language_utils.rs  lib.rs  localized_app.rs  localized_link.rs  localized_routable.rs  localized_route_iter.rs  localized_route_macro.rs  localized_switch.rs  route_language.rs  static_link.rs  static_navigator.rs  static_router.rs  static_switch.rs  utils.rs
yew-ssg-router/src/tests/: language_context_tests.rs  language_negotiation_tests.rs  localized_routable_tests.rs  localized_route_macro_tests.rs  mod.rs
yew-ssg/src/: config.rs  generator.rs  lib.rs  processor.rs  processor_collection.rs  static_site_generator.rs
yew-ssg/src/config_loader/: loader.rs  mod.rs  model.rs  tests.rs
yew-ssg/src/config_loader/loaders/: json_loader.rs  mod.rs  yaml_loader.rs
yew-ssg/src/generators/: canonical_link_generator.rs  json_ld_generator.rs  meta_tag_generator.rs  mod.rs  open_graph_generator.rs  robots_meta_generator.rs  title_generator.rs  twitter_card_generator.rs
yew-ssg/src/processors/: generator_output_support.rs  template_variable_processor.rs
yew-ssg/src/processors/attribute_processor/: mod.rs  process_element.rs  processor.rs  ssg_attribute.rs
