[workspace]
members = [
    "yew-ssg",
    "examples/about-page",
    "yew-ssg-router",
    "yew-ssg-router-macros",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/chriamue/yew-ssg"

[workspace.dependencies]
async-trait = "0.1"
log = "0.4"
lol_html = "2.2.0"
minijinja = "2.8.0"
strum = "0.27"
strum_macros = "0.27"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.34"
url = "2.5.4"
yew = { version = "0.21", features = ["ssr"] }
yew-router = "0.18"
yew-router-macro = "0.18"

# Internal crates
yew-ssg = { path = "yew-ssg" }
yew-ssg-router = { path = "yew-ssg-router" }
yew_router = { path = "yew-ssg-router", package = "yew-ssg-router" }
yew-ssg-router-macros = { path = "yew-ssg-router-macros" }
