[workspace]
members = [
    "yew-ssg",
    "examples/about-page",
    "yew-ssg-router",
    "yew-ssg-router-macros",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/chriamue/yew-ssg"

[workspace.dependencies]
log = "0.4"
lol_html = "2"
minijinja = "2"
strum = "0.27"
strum_macros = "0.27"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
url = "2"
yew = { version = "0.23", features = ["ssr"] }
yew-router = "0.20"
yew-router-macro = "0.20"

# Internal crates
yew-ssg = { path = "yew-ssg" }
yew-ssg-router = { path = "yew-ssg-router" }
yew_router = { path = "yew-ssg-router", package = "yew-ssg-router" }
yew-ssg-router-macros = { path = "yew-ssg-router-macros" }
