[package]
name = "yew-ssg-router"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
log = { workspace = true }
yew = { workspace = true }
yew-router = { workspace = true }
yew-router-macro = { workspace = true }

[features]
default = []
ssg = []
