[package]
name = "yew-ssg-router"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
log = { workspace = true }
yew = { workspace = true }
yew-router = { workspace = true }
yew-router-macro = { workspace = true }
yew-ssg-router-macros = { workspace = true }
serial_test = "3.2.0"
strum = { workspace = true }
strum_macros = { workspace = true }

[features]
default = []
ssg = []
