[package]
name = "about-page"
version.workspace = true
edition.workspace = true
description = "Example about page using yew-ssg"

[[bin]]
name = "about-page"
path = "src/main.rs"

[[bin]]
name = "ssg"
path = "src/bin/ssg.rs"
required-features = ["ssg"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
strum.workspace = true
strum_macros = "0.26.3"
yew-ssg = { workspace = true, optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
markdown = "1.0.0-alpha.23"
log.workspace = true
env_logger = { version = "0.10", optional = true }
chrono = "0.4"
regex = "1.10.2"

[features]
default = []
ssg = ["yew/ssr", "yew-ssg", "tokio", "env_logger"]
