[package]
name = "about-page"
version.workspace = true
edition.workspace = true
description = "Example about page using yew-ssg"

[[bin]]
name = "about-page"
path = "src/main.rs"

[[bin]]
name = "ssg"
path = "src/bin/ssg.rs"
required-features = ["ssg"]

[dependencies]
chrono = "0.4"
env_logger = { version = "0.10", optional = true }
log.workspace = true
markdown = "1.0.0-alpha.23"
once_cell = "1.21.3"
regex = "1.10.2"
strum.workspace = true
strum_macros = "0.27"
tokio = { version = "1.0", features = ["full"], optional = true }
yew = { version = "0.21", features = ["csr"] }
yew-ssg = { workspace = true, optional = true }
yew_router = { workspace = true }

[features]
default = []
ssg = ["yew/ssr", "yew-ssg", "yew_router/ssg", "tokio", "env_logger"]
